--- a/index.html
+++ b/index.html
@@ -1,174 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Indexing -->
-  <meta name="robots" content="index, follow, max-image-preview:large" />
+<!-- Indexing -->
+<meta name="robots" content="index, follow, max-image-preview:large" />
 
-  <!-- Primary SEO -->
-  <title>Sima Najafzadeh Khoei | Biostatistics PhD</title>
-  <meta name="description" content="Biostatistics Ph.D. student focused on ML-based calibration for agent-based epidemic models and comparative evaluation of Rₜ estimators. I build reproducible tools (epiworldRcalibrate, imaginarycss), contribute to epiworldR, and translate rigorous statistics and ML into actionable public health insights." />
-  <meta name="keywords" content="Sima, Sima NJF, Sima Najafzadeh, Sima Najafzadeh Khoei, Sima Khoei, publications, projects, statistical machine learning, biostatistics, data science, epidemiology" />
-  <link rel="canonical" href="https://sima-njf.github.io/" />
+<!-- Primary SEO -->
+<title>Sima Najafzadeh Khoei | Biostatistics PhD</title>
+<meta name="description" content="Biostatistics Ph.D. student focused on ML-based calibration for agent-based epidemic models and comparative evaluation of Rₜ estimators. I build reproducible tools (epiworldRcalibrate, imaginarycss), contribute to epiworldR, and translate rigorous statistics and ML into actionable public health insights." />
+<meta name="keywords" content="Sima, Sima NJF, Sima Najafzadeh, Sima Najafzadeh Khoei, Sima Khoei, publications, projects, statistical machine learning, biostatistics, data science, epidemiology" />
+<link rel="canonical" href="https://sima-njf.github.io/" />
 
-  <!-- Open Graph -->
-  <meta property="og:title" content="Sima Najafzadeh Khoei" />
-  <meta property="og:description" content="Biostatistics Ph.D. student building reliable, data-driven tools for infectious disease modeling and public health." />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://sima-njf.github.io/" />
-  <meta property="og:image" content="/asset/images/profile.webp" />
-  <meta property="og:image:alt" content="Sima Najafzadeh Khoei" />
+<!-- Open Graph -->
+<meta property="og:title" content="Sima Najafzadeh Khoei" />
+<meta property="og:description" content="Biostatistics Ph.D. student building reliable, data-driven tools for infectious disease modeling and public health." />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://sima-njf.github.io/" />
+<meta property="og:image" content="/asset/images/profile.webp" />
+<meta property="og:image:alt" content="Sima Najafzadeh Khoei" />
 
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Sima Najafzadeh Khoei" />
-  <meta name="twitter:description" content="Biostatistics Ph.D. student building reliable, data-driven tools for infectious disease modeling and public health." />
-  <meta name="twitter:image" content="https://sima-njf.github.io/asset/images/profile.webp" />
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Sima Najafzadeh Khoei" />
+<meta name="twitter:description" content="Biostatistics Ph.D. student building reliable, data-driven tools for infectious disease modeling and public health." />
+<meta name="twitter:image" content="https://sima-njf.github.io/asset/images/profile.webp" />
 
-  <!-- Authorship -->
-  <meta name="author" content="Sima Najafzadeh Khoei" />
-  <meta name="publisher" content="Sima Najafzadeh Khoei" />
+<!-- Authorship -->
+<meta name="author" content="Sima Najafzadeh Khoei" />
+<meta name="publisher" content="Sima Najafzadeh Khoei" />
 
-  <!-- Google Search Console verification -->
-  <meta name="google-site-verification" content="QknrxkLfnsyIASYh0Yyv4oNWwxWzGe3N8Y3hw_MnLIg" />
+<!-- Google Search Console verification -->
+  <meta name="google-site-verification" content="WfD8IM6FzhiHBuDV4dMR5QABjLxHfuIPR7IMJl1zMG4" />
+<meta name="google-site-verification" content="QknrxkLfnsyIASYh0Yyv4oNWwxWzGe3N8Y3hw_MnLIg" />
 
-  <!-- Icons -->
-  <link rel="icon" href="/avatar-ico.ico" type="image/x-icon" />
-  <link rel="icon" href="/fav-ico.png" type="image/png" sizes="32x32" />
-  <link rel="apple-touch-icon" href="/fav-ico.png" />
 
-  <!-- Styles -->
-  <link rel="stylesheet" href="/index.css" />
-  <link rel="stylesheet" href="/asset/css/header.css" />
-  <link rel="stylesheet" href="/asset/css/switch.css" />
-  <link rel="stylesheet" href="/asset/css/app.css" />
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet" />
+<!-- Icons -->
+<link rel="icon" href="/avatar-ico.ico" type="image/x-icon" />
+<link rel="icon" href="/fav-ico.png" type="image/png" sizes="32x32" />
+<link rel="apple-touch-icon" href="/fav-ico.png" />
 
-  <!-- Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-6DDEG362J3"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-6DDEG362J3');
-  </script>
+<!-- Styles -->
+<link rel="stylesheet" href="/index.css" />
+<link rel="stylesheet" href="/asset/css/header.css" />
+<link rel="stylesheet" href="/asset/css/switch.css" />
+<link rel="stylesheet" href="/asset/css/app.css" />
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet" />
 
-  <!-- JSON-LD: Person -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Person",
-    "name": "Sima Najafzadeh Khoei",
-    "givenName": "Sima",
-    "familyName": "Najafzadeh Khoei",
-    "jobTitle": "Biostatistics Ph.D. Student",
-    "url": "https://sima-njf.github.io/",
-    "image": "https://sima-njf.github.io/asset/images/profile.webp",
-    "sameAs": [
-      "https://github.com/sima-njf",
-      "https://www.linkedin.com/in/sima-khoei-23961b345/"
-    ]
-  }
-  </script>
-</head>
+<!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6DDEG362J3"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'G-6DDEG362J3');
+</script>
 
-<body>
-  <div class="container">
-    <header class="collapsed">
-      <div class="overlay" onclick="toggleMenu()">
-        <i id="expand-button" class="fa-solid fa-bars" aria-hidden="true"></i>
-        <span class="sr-only">Open menu</span>
-      </div>
+<!-- JSON-LD: Person (optional but recommended) -->
+<script type="application/ld+json">
+@@ -247,24 +248,25 @@
+<input class="contact-me-form-input" type="email" name="email" placeholder="Your Email" required />
+</div>
+<textarea class="contact-me-form-textare" name="message" placeholder="Your Message" required></textarea>
 
-      <div class="header-container">
-        <div class="header-container-items">
-          <div class="picture-container-switchb-holder">
-            <label class="picture-container-switchb-holder-switch">
-              <input type="checkbox" id="nightModeToggle" aria-label="Toggle dark mode" />
-              <span class="picture-container-switchb-holder-slider round"></span>
-            </label>
-            <i class="fas fa-moon moon-icon" aria-hidden="true"></i>
-            <i class="fa-regular fa-sun sun-icon" aria-hidden="true"></i>
-          </div>
+<div class="captcha-container">
+<div class="captcha-box" id="captchaBox" role="checkbox" aria-checked="false" tabindex="0">
+<div class="box"></div>
+<i class="fa-solid fa-check tick" style="display: none;"></i>
+</div>
+<p id="captchaText">I'm Human</p>
+</div>
 
-          <img class="header-container-img" width="200" height="200" src="/asset/images/profile.webp" alt="Portrait of Sima Najafzadeh Khoei" />
+<button class="contact-me-form-button" type="submit">Send</button>
+</form>
+</div>
+</div>
+</div>
+</div>
 
-          <a class="header-container-a item-active" href="/">Home</a>
-          <a class="header-container-a" href="/asset/sima_cv.pdf" target="_blank" rel="noopener" download>Resume</a>
-          <a class="header-container-a" href="/pages/honors.html">Honors</a>
-          <a class="header-container-a" href="/pages/projects.html">Projects</a>
-          <a class="header-container-a" href="/pages/activity.html">Activity</a>
-          <a class="header-container-a" href="/pages/publications.html">Publications</a>
-        </div>
-
-        <div class="social-icons">
-          <a href="https://x.com/UofUBiostats" target="_blank" rel="noopener" aria-label="U of U Biostats on X"><i class="fa-brands fa-x-twitter"></i></a>
-          <a href="https://github.com/sima-njf" target="_blank" rel="noopener" aria-label="Google Scholar or academic profile"><i class="fas fa-graduation-cap"></i></a>
-          <a href="https://github.com/sima-njf" target="_blank" rel="noopener" aria-label="GitHub profile"><i class="fab fa-github"></i></a>
-          <a href="mailto:sima.njf@utah.edu" target="_blank" rel="noopener" aria-label="Email Sima"><i class="fa-solid fa-envelope"></i></a>
-          <a href="https://www.linkedin.com/in/sima-khoei-23961b345/" target="_blank" rel="noopener" aria-label="LinkedIn profile"><i class="fab fa-linkedin"></i></a>
-        </div>
-      </div>
-    </header>
-
-    <div class="information-body">
-      <div class="information-body-name">
-        <div class="information-body-name-h1-holder">
-          <h1 class="information-body-name-h1" data-full-name="Sima Najafzadeh Khoei">Sima Khoei</h1>
-          <div class="information-body-name-h1-div"></div>
-        </div>
-        <img class="header-container-img-tablet" width="200" height="200" src="/asset/images/profile.webp" alt="Portrait of Sima Najafzadeh Khoei" />
-      </div>
-
-      <div class="header-container-img-mobile-container">
-        <img class="header-container-img-mobile" width="600" height="600" src="/asset/images/profile.webp" alt="Portrait of Sima Najafzadeh Khoei" />
-      </div>
-
-      <!-- 🔁 UPDATED INTRODUCTION STARTS HERE -->
-      <div class="information-body-paragraphs">
-        <p class="information-body-paragraphs-textarea">
-          I'm a Biostatistics Ph.D. student at the University of Utah, passionate about developing machine learning tools to support infectious disease modeling and public health decision-making. My work bridges advanced statistical methods with real-world impact—currently through building <code>epiworldRcalibrate</code>, an R package for fast and accurate calibration of agent-based models, and <code>imaginarycss</code>, a toolkit for analyzing Cognitive Social Structures. I regularly present at leading conferences (CDC, ENAR, JSM), contribute to open-source projects like <code>epiworldR</code>, and strive to turn rigorous methods into reproducible, actionable insights.
-        </p>
-      </div>
-      <!-- 🔁 UPDATED INTRODUCTION ENDS HERE -->
-
-      <div class="information-body-cards">
-        <a href="/pages/publications.html" class="information-body-cards-aaa">
-          <div class="information-body-card">
-            <strong class="information-body-card-strong">Publications</strong>
-            <div class="information-body-card-img">
-              <img width="400" height="400" src="/asset/images/publication.webp" alt="Publications icon" />
-            </div>
-            <div class="information-body-card-content">
-              <p>World of my research</p>
-            </div>
-          </div>
-        </a>
-
-        <a href="/pages/projects.html" class="information-body-cards-aaa">
-          <div class="information-body-card">
-            <strong class="information-body-card-strong">Projects</strong>
-            <div class="information-body-card-img">
-              <img width="400" height="400" src="/asset/images/project.webp" alt="Projects icon" />
-            </div>
-            <div class="information-body-card-content">
-              <p>Realm of my projects</p>
-            </div>
-          </div>
-        </a>
-      </div>
-
-      <!-- The rest of your HTML remains unchanged -->
-      <!-- Education & Contact sections -->
-      <!-- ... -->
-
-    </div>
-  </div>
-
-  <!-- Scripts -->
-  <script src="/index.js"></script>
-  <script src="/asset/js/switch.js"></script>
+<!-- Scripts -->
+<script src="/index.js"></script>
+<script src="/asset/js/switch.js"></script>
 </body>
 </html>
