--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
   <meta name="publisher" content="Sima Najafzadeh Khoei" />
 
   <!-- Google Search Console verification -->
-  <meta name="google-site-verification" content="QknrxkLfnsyIASYh0Yyv4oNWwxWzGe3N8Y3hw_MnLIg" />
+<meta name="google-site-verification" content="QknrxkLfnsyIASYh0Yyv4oNWwxWzGe3N8Y3hw_MnLIg" />
+
 
   <!-- Icons -->
   <link rel="icon" href="/avatar-ico.ico" type="image/x-icon" />
@@ -55,7 +56,7 @@
     gtag('config', 'G-6DDEG362J3');
   </script>
 
-  <!-- JSON-LD: Person -->
+  <!-- JSON-LD: Person (optional but recommended) -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -126,16 +127,145 @@
         <img class="header-container-img-mobile" width="600" height="600" src="/asset/images/profile.webp" alt="Portrait of Sima Najafzadeh Khoei" />
       </div>
 
-      <!-- ✅ UPDATED BIOGRAPHY STARTS HERE -->
       <div class="information-body-paragraphs">
         <p class="information-body-paragraphs-textarea">
-          I’m a Biostatistics Ph.D. student at the University of Utah, passionate about creating machine‑learning tools for infectious‑disease modeling and public‑health decision‑making. My work focuses on <strong>ML‑based calibration of agent‑based epidemic models</strong>—including a three‑layer bidirectional LSTM calibrator being developed as <code>epiworldRcalibrate</code>—and on the <strong>comparative evaluation of effective reproduction number (R<sub>t</sub>) estimators</strong> using agent‑based network models. I collaborate closely with <a href="https://medicine.utah.edu/faculty/bernardo-modenesi" target="_blank" rel="noopener" class="information-body-paragraphs-textarea-strong">Dr. Bernardo Modenesi</a>, <a href="https://medicine.utah.edu/faculty/yue-zhang" target="_blank" rel="noopener" class="information-body-paragraphs-textarea-strong">Dr. Yue Zhang</a>, and <a href="https://ggvy.cl/" target="_blank" rel="noopener" class="information-body-paragraphs-textarea-strong">Dr. George Vega Yon</a>, and contribute to open‑source tools such as <code>epiworldR</code>.
+          I’m a biostatistics Ph.D. student dedicated to building reliable, data-driven tools for infectious-disease modeling and public-health decision-making. My current work focuses on
+          <strong>machine-learning–based calibration for agent-based epidemic models</strong>—including a three-layer bidirectional LSTM calibrator that improves accuracy and runtime over ABC and is being productized as <code>epiworldRcalibrate</code>—and on the
+          <strong>comparative evaluation of effective reproduction number (R<sub>t</sub>) estimators</strong> using agent-based network models. I collaborate closely with
+          <a href="https://medicine.utah.edu/faculty/bernardo-modenesi" target="_blank" rel="noopener" class="information-body-paragraphs-textarea-strong">Dr. Bernardo Modenesi</a>,
+          <a href="https://medicine.utah.edu/faculty/yue-zhang" target="_blank" rel="noopener" class="information-body-paragraphs-textarea-strong">Dr. Yue Zhang</a>, and
+          <a href="https://ggvy.cl/" target="_blank" rel="noopener" class="information-body-paragraphs-textarea-strong">Dr. George Vega Yon</a>, and I contribute to open-source tools such as <code>epiworldR</code>.
         </p>
 
         <p class="information-body-paragraphs-textarea">
-          Alongside research, I <strong>develop R packages</strong> with clear APIs and reproducible workflows. Current efforts include <code>epiworldRcalibrate</code> for practical calibration of epidemic ABMs and <code>imaginarycss</code> for Cognitive Social Structures (software paper in preparation, Sept. 2025). I share my work at national venues including CDC (2024), ENAR (2025), and JSM (2025), aiming to translate rigorous statistics and machine learning into actionable public‑health insight.
+          Beyond methods, I <strong>develop R packages</strong> with clear APIs, careful documentation, and reproducible workflows. Current efforts include <code>epiworldRcalibrate</code> for practical calibration of epidemic ABMs and <code>imaginarycss</code> for Cognitive Social Structures (software paper in preparation, Sept. 2025). I share results with both technical and applied audiences (CDC 2024; ENAR 2025; JSM 2025 selection) with the goal of turning rigorous statistics and machine learning into actionable public-health insight.
         </p>
       </div>
-      <!-- ✅ UPDATED BIOGRAPHY ENDS HERE -->
 
-      <!-- Your "cards", "education", "contact" and all remaining sections follow here and were not changed -->
+      <div class="information-body-cards">
+        <a href="/pages/publications.html" class="information-body-cards-aaa">
+          <div class="information-body-card">
+            <strong class="information-body-card-strong">Publications</strong>
+            <div class="information-body-card-img">
+              <img width="400" height="400" src="/asset/images/publication.webp" alt="Publications icon" />
+            </div>
+            <div class="information-body-card-content">
+              <p>World of my research</p>
+            </div>
+          </div>
+        </a>
+
+        <a href="/pages/projects.html" class="information-body-cards-aaa">
+          <div class="information-body-card">
+            <strong class="information-body-card-strong">Projects</strong>
+            <div class="information-body-card-img">
+              <img width="400" height="400" src="/asset/images/project.webp" alt="Projects icon" />
+            </div>
+            <div class="information-body-card-content">
+              <p>Realm of my projects</p>
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="picture-container-tabletmobile">
+        <div class="profile-card-education">
+          <strong class="profile-card-education-strong">Education</strong>
+          <div class="profile-card-education-logos">
+            <div class="profile-card-education-logo">
+              <img class="profile-card-education-logo-img" width="200" height="200" src="/asset/images/utah.webp" alt="University of Utah logo" />
+              <p class="profile-card-education-logo-p">The University of </p>
+              <strong class="profile-card-education-logo-p-strong">Utah</strong>
+              <strong class="profile-card-education-logo-strong">Ph.D., Public Health</strong>
+              <div class="profile-card-education-logo-hline"></div>
+            </div>
+            <div class="profile-card-education-logo">
+              <img class="profile-card-education-logo-img" width="200" height="200" src="/asset/images/tehran.webp" alt="University of Tehran logo" />
+              <p class="profile-card-education-logo-p">The University</p>
+              <strong class="profile-card-education-logo-p-strong">Tehran</strong>
+              <strong class="profile-card-education-logo-strong">B.Sc., Statistics</strong>
+              <div class="profile-card-education-logo-hline"></div>
+            </div>
+          </div>
+        </div>
+
+        <div class="profile-card-contact-me">
+          <div class="profile-card-contact-me-form">
+            <form class="contact-me-form" action="https://api.web3forms.com/submit" method="POST">
+              <strong class="contact-me-form-strong">Get In Touch!</strong>
+              <input type="hidden" name="access_key" value="1ad17c65-d9cb-45b8-8bcd-c2fc055fab5f" />
+              <div class="contact-me-form-inputs">
+                <input class="contact-me-form-input" type="text" name="name" placeholder="Your Name" required />
+                <input class="contact-me-form-input" type="email" name="email" placeholder="Your Email" required />
+              </div>
+              <textarea class="contact-me-form-textare" name="message" placeholder="Your Message" required></textarea>
+
+              <div class="captcha-container">
+                <div class="captcha-box" id="captchaBoxTablet" role="checkbox" aria-checked="false" tabindex="0">
+                  <div class="box"></div>
+                  <i class="fa-solid fa-check tick" style="display: none;"></i>
+                </div>
+                <p id="captchaTextTablet">I'm Human</p>
+              </div>
+
+              <button class="contact-me-form-button" type="submit">Send</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="picture-container">
+      <div class="profile-card-education">
+        <strong class="profile-card-education-strong">Education</strong>
+        <div class="profile-card-education-logos">
+          <div class="profile-card-education-logo">
+            <img class="profile-card-education-logo-img" width="200" height="200" src="/asset/images/utah.webp" alt="University of Utah logo" />
+            <p class="profile-card-education-logo-p">The University of </p>
+            <strong class="profile-card-education-logo-p-strong">Utah</strong>
+            <strong class="profile-card-education-logo-strong">Ph.D., Public Health</strong>
+            <div class="profile-card-education-logo-hline"></div>
+          </div>
+          <div class="profile-card-education-logo">
+            <img class="profile-card-education-logo-img" width="200" height="200" src="/asset/images/tehran.webp" alt="University of Tehran logo" />
+            <p class="profile-card-education-logo-p">The University</p>
+            <strong class="profile-card-education-logo-p-strong">Tehran</strong>
+            <strong class="profile-card-education-logo-strong">B.Sc., Statistics</strong>
+            <div class="profile-card-education-logo-hline"></div>
+          </div>
+        </div>
+      </div>
+
+      <div class="profile-card-contact-me">
+        <div class="profile-card-contact-me-form">
+          <form class="contact-me-form" action="https://api.web3forms.com/submit" method="POST">
+            <strong class="contact-me-form-strong">Get In Touch!</strong>
+            <input type="hidden" name="access_key" value="55be92c5-3395-4070-9e90-a4b4e2d6275a" />
+            <input type="hidden" name="redirect" value="https://sima-njf.github.io/pages/success.html" />
+
+            <div class="contact-me-form-inputs">
+              <input class="contact-me-form-input" type="text" name="name" placeholder="Your Name" required />
+              <input class="contact-me-form-input" type="email" name="email" placeholder="Your Email" required />
+            </div>
+            <textarea class="contact-me-form-textare" name="message" placeholder="Your Message" required></textarea>
+
+            <div class="captcha-container">
+              <div class="captcha-box" id="captchaBox" role="checkbox" aria-checked="false" tabindex="0">
+                <div class="box"></div>
+                <i class="fa-solid fa-check tick" style="display: none;"></i>
+              </div>
+              <p id="captchaText">I'm Human</p>
+            </div>
+
+            <button class="contact-me-form-button" type="submit">Send</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Scripts -->
+  <script src="/index.js"></script>
+  <script src="/asset/js/switch.js"></script>
+</body>
+</html>
