--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <!-- Primary SEO -->
   <title>Sima Najafzadeh Khoei | Biostatistics PhD</title>
-  <meta name="description" content="Biostatistics Ph.D. student focused on ML-based calibration for agent-based epidemic models and comparative evaluation of Rₜ estimators. I build reproducible tools (epiworldRcalibrate, imaginarycss), contribute to epiworldR, and translate rigorous statistics and ML into actionable public health insights." />
+  <meta name="description" content="Biostatistics Ph.D. candidate focused on ML-based calibration for agent-based epidemic models and comparative evaluation of Rₜ estimators. I build reproducible tools (epiworldRcalibrate, imaginarycss), contribute to epiworldR, and translate rigorous statistics and ML into actionable public health insights." />
   <meta name="keywords" content="Sima, Sima NJF, Sima Najafzadeh, Sima Najafzadeh Khoei, Sima Khoei, publications, projects, statistical machine learning, biostatistics, data science, epidemiology" />
   <link rel="canonical" href="https://sima-njf.github.io/" />
 
@@ -269,3 +269,4 @@
   <script src="/asset/js/switch.js"></script>
 </body>
 </html>
+
